frontend/test/should_fail/index_exec_edge_fromIndexSame_return_value_mismatch.grg
#using "index_exec_model.gm"

sequence s(i:set<Node>)
{
	{ i=edgesFromIndexSame(bari, 42) }
}
